# wiztoolkit

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  automated_tests.csv  default.nix  development_notes.md  feed.xml  index.html  license.md  readme.adoc  sbom.spdx
assets/css/: content.css  fonts.css  layout.css
docker/: wtk-nix.docker
docs/: .single_page_manual.adoc  0_intro.adoc  1_parsing.adoc  2_nails.adoc  5_testcases.adoc  7_install.adoc  backends.adoc  commandline.adoc  install.adoc  parsers.adoc  readme.adoc  single_page_manual.adoc
docs/3_plugins/: 0_intro.adoc  1_extended_arithmetic.adoc  1_iter_v0.adoc  1_mux_v0.adoc  1_ram_arith.adoc  1_ram_bool_v0.adoc  1_wizkit_vectors.adoc
docs/4_tools/: firealarm.adoc  press.adoc
docs/6_sample_backends/: 0_intro.adoc  1_simple.adoc  2_multitype.adoc  3_simple_plugins.adoc  multitype.cpp  simple.cpp  simple_plugins.cpp
docs/tools/: wtk-bolt.adoc  wtk-firealarm.adoc  wtk-press.adoc  wtk-viz.adoc
docs/v1.0.1/: backends.html  commandline.html  index.html  install.html  parsers.html  single_page_manual.html
docs/v2.1.0/: 0_intro.html  1_parsing.html  2_nails.html  5_testcases.html  7_install.html  index.html
examples/: empty.ins  empty.wit  fib.rel  point_on_curve.ins  point_on_curve.rel  point_on_curve.wit  sha256.ins  sha256.rel  sha256.wit
nix/: cmakelists-external-deps.patch  sst-no-wget.patch
src/: CMakeLists.txt
src/main/cpp/: CMakeLists.txt
src/main/cpp/wtk/: ArithmeticStreamHandler.h  ArithmeticStreamHandler.t.h  BooleanStreamHandler.cpp  BooleanStreamHandler.h  Converter.h  IR2Tree.h  IRParameters.cpp  IRParameters.h  IRTree.cpp  IRTree.h  IRTree.t.h  Parser.h  Parser.t.h  QueueInputStream.h  QueueInputStream.t.h  TypeBackend.h  Version.h  index.h  indexes.h  press.cpp  versions.h
src/main/cpp/wtk/antlr/: AntlrIRTree.t.h  ErrorListener.t.h  GateUtils.t.h  Parser.h  Parser.t.h  TreeParser.t.h  to_uint.t.h
src/main/cpp/wtk/bolt/: ArithmeticPLASMASnoozeHandler.h  Backend.h  Backend.t.h  BooleanPLASMASnoozeHandler.h  Builder.h  Builder.t.h  Evaluator.h  Evaluator.t.h  Expr.cpp  Expr.h  NoZKBackend.h  PLASMASnooze.h  PLASMASnooze.t.h  SwitchStreamHandler.h  SwitchStreamHandler.t.h  directives.h  directives.t.h  main.cpp  wires.h  wires.t.h
src/main/cpp/wtk/circuit/: Data.h  Data.t.h  Handler.h  Parser.h
src/main/cpp/wtk/converters/: Multiplex.h  Multiplex.t.h  TreeHelper.h  TreeHelper.t.h
src/main/cpp/wtk/firealarm/: Converter.h  Converter.t.h  Counters.h  FieldBackend.h  FieldBackend.t.h  RAM.h  RAM.t.h  State.h  TraceTreeAlarm.h  TraceTreeAlarm.t.h  TreeAlarm.h  TreeAlarm.t.h  Wire.h  Wire.t.h  WireSet.cpp  WireSet.h  WireSet.t.h  main.cpp
src/main/cpp/wtk/flatbuffer/: ArithmeticFlatBufferStreamPrinter.h  ArithmeticFlatBufferStreamPrinter.t.h  BooleanFlatBufferStreamPrinter.cpp  BooleanFlatBufferStreamPrinter.h  FBIRTree.t.h  FlatBufferInputStreamPrinter.h  FlatBufferInputStreamPrinter.t.h  FlatBufferPrinter.h  FlatBufferPrinter.t.h  FlatBufferTreePrinter.h  FlatBufferTreePrinter.t.h  FlatNumberHelper.t.h  Parser.h  Parser.t.h  TreeParser.t.h
src/main/cpp/wtk/irregular/: AutomataCtx.cpp  AutomataCtx.h  CircuitIR.i.h  ParseEnums.h  Parser.h  Parser.t.h  TextIRTree.t.h  TextTreeParser.t.h  checkMacros.t.h
src/main/cpp/wtk/nails/: Converter.h  Converter.t.h  Functions.h  Functions.t.h  Handler.h  Handler.t.h  Interpreter.h  Interpreter.t.h  IterPlugin.h  IterPlugin.t.h  Plugins.h  Plugins.t.h  Scope.cpp  Scope.h  Scope.t.h  TypeInterpreter.h  TypeInterpreter.t.h
src/main/cpp/wtk/plugins/: ArithmeticRAM.h  ArithmeticRAM.t.h  BooleanRAM.h  BooleanRAM.t.h  ExtendedArithmetic.h  ExtendedArithmetic.t.h  Multiplexer.h  Multiplexer.t.h  Plugin.h  Plugin.t.h  PluginBackend.h  PluginBackend.t.h  SimplePlugin.h  SimplePlugin.t.h  Vectors.h  Vectors.t.h
src/main/cpp/wtk/press/: FlatbufferPrinter.h  NothingPrinter.h  Printer.h  TextPrinter.h  main.cpp
src/main/cpp/wtk/printers/: ArithmeticTextStreamPrinter.h  ArithmeticTextStreamPrinter.t.h  BooleanTextStreamPrinter.cpp  BooleanTextStreamPrinter.h  TextTreePrinter.h  TextTreePrinter.t.h  printTextInputStream.h  printTextInputStream.t.h  printTextParameters.h  printTextParameters.t.h
src/main/cpp/wtk/utils/: CharMap.cpp  CharMap.h  FileNameUtils.cpp  FileNameUtils.h  IRTreeUtils.cpp  IRTreeUtils.h  IRTreeUtils.t.h  Indent.h  NumUtils.cpp  NumUtils.gmp.h  NumUtils.h  NumUtils.t.h  ParserOrganizer.h  ParserOrganizer.t.h  Pool.h  Pool.t.h  SkipList.h  SkipList.t.h  hints.h  is_prime.h  is_prime.t.h
src/main/cpp/wtk/viz/: TreeVisualizer.h  TreeVisualizer.t.h  main.cpp
src/test/cpp/: CMakeLists.txt
src/test/cpp/wtk/utils/: CharMap.test.cpp  IRTreeUtils.test.cpp  SkipList.test.cpp  is_prime.test.cpp
tests_ir1/: fib_func.rel
tests_ir1/2comp_add_or_sub/: 1234_plus_5678.ins  1234_plus_5678.wit  5678_minus_1234.ins  5678_minus_1234.wit  overflow.ins  overflow.wit  twos_comp_calc.rel  underflow.ins  underflow.wit
tests_ir1/add4/: add4.rel  add4_anon.rel  sum0.wit  sum4_func.rel  sumNot0.wit  sum_check0.rel
tests_ir1/add4_or_mul4/: add4_or_mul4.rel  add4_or_mul4_anon.rel  prod0.wit  prodNot0.wit  sum0.wit  sumNot0.wit
tests_ir1/bool_switch/: 00.wit  01.wit  10.wit  11.wit  empty.ins  one_case.rel  two_cases.rel
tests_ir1/loop_in_switch/: loop_in_switch.ins  loop_in_switch.rel  loop_in_switch_0.wit  loop_in_switch_1.wit
tests_ir1/matrix_prod_10/: matrix_prod10.ins  matrix_prod10.ir0.rel  matrix_prod10.ir1.rel  matrix_prod10.wit
tests_ir1/square_loop/: square_loop.rel  zeros.ins  zeros.wit
tests_ir1/sum_or_mul_input/: prod0.ins  prod0.wit  prodNot0.wit  sum0.ins  sum0.wit  sumNot0.wit  sum_or_mul_input.rel  sum_or_mul_input_anon.rel  sum_or_mul_input_anon_check.rel  sum_or_mul_input_check.rel
tests_ir1/sum_test/: sum_test.ins  sum_test.rel  sum_test.wit  sum_test_fail.wit
tests_ir1/switch_cases/: case_0.wit  case_1.wit  case_2.wit  case_3.wit  case_4.wit  case_5.wit  case_6.wit  case_7.wit  empty.ins  one.ins  one_out_case_1.rel  one_out_case_2.rel  one_out_case_3.rel  one_out_case_4.rel  one_out_case_5.rel  one_out_case_6.rel  (+37 more)
(+69 files in other folders)
